# bitbox-wallet-app

./: .gitignore  CHANGELOG.md  Makefile  go.mod  go.sum  tatus
.claude/: launch.json
.github/workflows/: ci.yml
backend/: accountcodes.go  accounts.go  accounts_test.go  backend.go  backend_test.go  balance_statement.go  balance_statement_test.go  chart.go  chart_test.go  soltoken.go
backend-rs/: Cargo.toml  README.md
backend-rs/compat/: Cargo.toml
backend-rs/compat/src/: endpoints.rs  lib.rs
backend-rs/core/accounts/: Cargo.toml
backend-rs/core/accounts/src/: lib.rs
backend-rs/core/auth/: Cargo.toml
backend-rs/core/auth/src/: lib.rs
backend-rs/core/coins/: Cargo.toml
backend-rs/core/coins/src/: lib.rs
backend-rs/core/config/: Cargo.toml
backend-rs/core/config/src/: lib.rs
backend-rs/core/devices/: Cargo.toml
backend-rs/core/devices/src/: lib.rs
backend-rs/core/market/: Cargo.toml
backend-rs/core/market/src/: lib.rs
backend-rs/core/notes/: Cargo.toml
backend-rs/core/notes/src/: lib.rs
backend-rs/core/rates/: Cargo.toml
backend-rs/core/rates/src/: lib.rs
backend-rs/core/swap/: Cargo.toml
backend-rs/core/swap/src/: lib.rs
backend-rs/go_sidecar/: Cargo.toml
backend-rs/go_sidecar/src/: lib.rs
backend-rs/server/: Cargo.toml
backend-rs/server/src/: app.rs  main.rs  native.rs  proxy.rs  ws.rs
backend/bridgecommon/: bridgecommon.go  bridgecommon_test.go
backend/config/: accounts.go  accounts_test.go  config.go  lightning.go
backend/handlers/: handlers.go  handlers_test.go
backend/keystore/: keystore.go
backend/lightning/: handlers.go  lightning.go  lightning_test.go  (+2 more)
scripts/: ci.sh
(+106 files in other folders)
