[workspace]
resolver = "2"
members = [
  "compat",
  "go_sidecar",
  "server",
  "core/config",
  "core/accounts",
  "core/coins",
  "core/devices",
  "core/market",
  "core/swap",
  "core/notes",
  "core/auth",
  "core/rates",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "signal", "process", "time", "net"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
