[package]
name = "bbapp_backend_rs_server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "servewallet-rs"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bbapp_backend_rs_compat = { path = "../compat" }
bbapp_backend_rs_go_sidecar = { path = "../go_sidecar" }
clap.workspace = true
futures-util.workspace = true
http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
